[gd_scene load_steps=9 format=3 uid="uid://c1k177o55jxww"]

[ext_resource type="Script" path="res://scripts/hands/dealer_hand_preset_script.gd" id="1_g6plf"]
[ext_resource type="Texture2D" uid="uid://b34wjkvohy85y" path="res://assets/hands/dealer_hand.png" id="2_rv1kg"]
[ext_resource type="Script" path="res://scripts/cards/card_manager_script.gd" id="3_1gfc7"]
[ext_resource type="Texture2D" uid="uid://blictlljkshuu" path="res://assets/hands/dealer_thumb.png" id="4_1qdtj"]
[ext_resource type="Theme" uid="uid://c12q624cncrhr" path="res://assets/Themes/normal_text_theme.tres" id="5_xmwi0"]

[sub_resource type="Curve" id="Curve_fbl65"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, -2.0, 0, 1, Vector2(1, -1), -2.0, 0.0, 1, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_bgd8p"]
min_value = 1.0
max_value = 2.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(0.5, 2), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 3

[sub_resource type="Curve" id="Curve_8psea"]
min_value = -1.0
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, -1), 0.0, 0.0, 0, 0]
point_count = 2

[node name="Hand" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_g6plf")

[node name="handSprite" type="Sprite2D" parent="."]
position = Vector2(0, -192)
scale = Vector2(6, 6)
texture = ExtResource("2_rv1kg")

[node name="card_manager" type="Marker2D" parent="handSprite"]
position = Vector2(-4, 3)
rotation = -0.10472
script = ExtResource("3_1gfc7")
hand_curve = SubResource("Curve_fbl65")
hand_height_curve = SubResource("Curve_bgd8p")
hand_rotation_curve = SubResource("Curve_8psea")
handHeight = 1.0
handSize = 6.0
rotation_multiplier = 0.1

[node name="thumbSprite" type="Sprite2D" parent="handSprite"]
texture = ExtResource("4_1qdtj")

[node name="number" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.492
anchor_top = 1.0
anchor_right = 0.492
anchor_bottom = 1.0
offset_left = -49.24
offset_top = -462.0
offset_right = 48.76
offset_bottom = -426.0
color = Color(0, 0, 0, 0.14902)

[node name="Label" type="Label" parent="number"]
layout_mode = 0
offset_right = 98.0
offset_bottom = 36.0
theme = ExtResource("5_xmwi0")
text = "--"
horizontal_alignment = 1
vertical_alignment = 1
